# scip-routing

./: .gitignore  README.md  demo.ipynb  env.yml  setup.py  test.py
rs_pricing/: Cargo.toml  pyproject.toml
rs_pricing/src/: lib.rs
scip_routing/: compact.py  edge_brancher.py  edge_branching_eventhdlr.py  pricing.py  solver.py  utils.py
tests/: test_colgen.py  test_compact.py
