[package]
name = "rs_pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_pricing"
crate-type = ["cdylib"]


[profile.release]
incremental = true 

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
bit-set = "0.5.3"
rayon = "1.5.1"